--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     For initial commit
     testing git stash command
     testing git stash second time.
+    git merge testing on feat
 </body>
 </html>
