changer on main

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     For initial commit
     testing git stash command
     testing git stash second time.
-    git merge testing on feat
+    git merge testing on feat now on main
 </body>
 </html>
