--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     testing git stash command
     testing git stash second time.
     git merge testing on feat
+    here is another commit
 </body>
 </html>
