Main first commit

--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <title>Git Testing</title>
 </head>
 <body>
-    For initial commit
-    testing git stash command
-    testing git stash second time.
-    git merge testing on feat now on main
-    here is another commit
+    main commit one
 </body>
 </html>
